tests/aster/x/mochi/rosetta/four-is-the-number-of-letters-in-the-....error
error[A024]: unknown function substring
  --> /workspace/mochi/tests/rosetta/x/Mochi/four-is-the-number-of-letters-in-the-....mochi:91:14

 91 |     let ch = substring(s, i, i+1)
    |              ^

help:
  Declare substring before use
